fix: prevent line number wrapping

--- a/client/components/AnnotatedText/style.css
+++ b/client/components/AnnotatedText/style.css
@@ -35,6 +35,7 @@
     display: inline-block;
     padding: 0 30px 0 11px;
     color: #959da5;
+    white-space: nowrap;
 }
 
 .metanno-text-view .line-number,
